fixed gap in App class

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
+  min-height: 100vh;
 }
 body {
   margin: {
